--- a/PuntoRP-V3-master/Frontend/static/stylesheet_ceo.css
+++ b/PuntoRP-V3-master/Frontend/static/stylesheet_ceo.css
@@ -1,4 +1,7 @@
 
+body{
+    background-color: black;
+}
 .contenedor-tienda{
     width: 100%;
     height: 100vh;
@@ -13,6 +16,10 @@
     align-items: left;
     text-align: left;
     border-right: white solid 1px;
+}
+#checkbox-membresias{
+    height: 10px;
+    width: 20px;
 }
 .ceo-section1 div{
     padding: 15px;
